--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -1,90 +1,100 @@
+items:
 - name: Dokumentation om Azure HDInsight
   href: /azure/hdinsight
 - name: Företagssäkerhet
   items:
-    - name: Översikt
-      href: apache-domain-joined-introduction.md
-    - name: Planera för domänanslutna kluster
-      href: apache-domain-joined-architecture.md
-    - name: Konfigurera domänanslutna kluster med Azure AD DS
-      href: apache-domain-joined-configure-using-azure-adds.md
-    - name: Synkronisera Azure AD-användare till ett HDInsight-kluster
-      href: ../hdinsight-sync-aad-users-to-cluster.md
-      maintainContext: true
-    - name: Konfigurera Hive-principer
-      href: apache-domain-joined-run-hive.md
-      maintainContext: true
-    - name: Använda VSCode för att länka till domänanslutna kluster
-      href: ../hdinsight-for-vscode.md
-    - name: Använda IntelliJ för att länka till domänanslutna kluster
-      href: ../spark/apache-spark-intellij-tool-plugin.md
-    - name: Använda Eclipse för att länka till domänanslutna kluster
-      href: ../spark/apache-spark-eclipse-tool-plugin.md
-    - name: Använda Oozie i domänanslutna kluster
-      href: hdinsight-use-oozie-domain-joined-clusters.md
+  - name: Översikt
+    href: apache-domain-joined-introduction.md
+  - name: Planera för domänanslutna kluster
+    href: apache-domain-joined-architecture.md
+  - name: Konfigurera domänanslutna kluster med Azure AD DS
+    href: apache-domain-joined-configure-using-azure-adds.md
+  - name: Synkronisera Azure AD-användare till ett HDInsight-kluster
+    href: ../hdinsight-sync-aad-users-to-cluster.md
+    maintainContext: true
+  - name: Konfigurera Hive-principer
+    href: apache-domain-joined-run-hive.md
+    maintainContext: true
+  - name: Använda VSCode för att länka till domänanslutna kluster
+    href: ../hdinsight-for-vscode.md
+    maintainContext: true
+  - name: Använda IntelliJ för att länka till domänanslutna kluster
+    href: ../spark/apache-spark-intellij-tool-plugin.md
+    maintainContext: true
+  - name: Använda Eclipse för att länka till domänanslutna kluster
+    href: ../spark/apache-spark-eclipse-tool-plugin.md
+    maintainContext: true
+  - name: Använda Oozie i domänanslutna kluster
+    href: hdinsight-use-oozie-domain-joined-clusters.md
 - name: Skydda data
   href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
   maintainContext: true
 - name: Nätverksåtkomst
   items:
-    - name: HDInsight i ett virtuellt Azure-nätverk
-      href: ../hdinsight-extend-hadoop-virtual-network.md
-      maintainContext: true
-    - name: Ansluta HDInsight till det lokala nätverket
-      href: ../connect-on-premises-network.md
-      maintainContext: true
-    - name: Skapa HBase-kluster i ett virtuellt Azure-nätverk
-      href: ../hbase/apache-hbase-provision-vnet.md
-      maintainContext: true
-    - name: Replikering av HBase-kluster i ett virtuellt Azure-nätverk
-      href: ../hbase/apache-hbase-replication.md
-      maintainContext: true
+  - name: HDInsight i ett virtuellt Azure-nätverk
+    href: ../hdinsight-extend-hadoop-virtual-network.md
+    maintainContext: true
+  - name: Ansluta HDInsight till det lokala nätverket
+    href: ../connect-on-premises-network.md
+    maintainContext: true
+  - name: Skapa HBase-kluster i ett virtuellt Azure-nätverk
+    href: ../hbase/apache-hbase-provision-vnet.md
+    maintainContext: true
+  - name: Replikering av HBase-kluster i ett virtuellt Azure-nätverk
+    href: ../hbase/apache-hbase-replication.md
+    maintainContext: true
 - name: Övervakning med hjälp av Log Analytics
   items:
-    - name: Använda Azure Log Analytics
-      href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-      maintainContext: true
-    - name: Använda frågor med Log Analytics
-      href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-      maintainContext: true
-    - name: Övervaka klusterprestanda
-      href: ../hdinsight-key-scenarios-to-monitor.md
-      maintainContext: true
+  - name: Använda Azure Log Analytics
+    href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+    maintainContext: true
+  - name: Använda frågor med Log Analytics
+    href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+    maintainContext: true
+  - name: Övervaka klusterprestanda
+    href: ../hdinsight-key-scenarios-to-monitor.md
+    maintainContext: true
 - name: Referens
   items:
-    - name: Kodexempel
-      href: 'https://azure.microsoft.com/en-us/resources/samples/?service=hdinsight'
-    - name: Azure PowerShell
-      href: /powershell/module/azurerm.hdinsight
-    - name: .NET (Hadoop)
-      href: 'https://docs.microsoft.com/dotnet/api/overview/azure/hd-insight?view=azure-dotnet'
-    - name: .NET (HBase)
-      href: 'https://www.nuget.org/packages/Microsoft.HBase.Client/'
-    - name: .NET (Avro)
-      href: 'https://hadoopsdk.codeplex.com/wikipage?title=Avro%20Library'
-    - name: REST
-      href: /rest/api/hdinsight/
-    - name: REST (Spark)
-      href: /rest/api/hdinsightspark/
+  - name: Kodexempel
+    href: https://azure.microsoft.com/en-us/resources/samples/?service=hdinsight
+  - name: Azure PowerShell
+    href: /powershell/module/azurerm.hdinsight
+  - name: .NET (Hadoop)
+    href: https://docs.microsoft.com/dotnet/api/overview/azure/hd-insight?view=azure-dotnet
+  - name: .NET (HBase)
+    href: https://www.nuget.org/packages/Microsoft.HBase.Client/
+  - name: .NET (Avro)
+    href: https://hadoopsdk.codeplex.com/wikipage?title=Avro%20Library
+  - name: REST
+    href: /rest/api/hdinsight/
+  - name: REST (Spark)
+    href: /rest/api/hdinsightspark/
 - name: Resurser
   items:
-    - name: Viktig information
-      href: ../hdinsight-release-notes.md
+  - name: Viktig information
+    href: ../hdinsight-release-notes.md
+    items:
+    - name: Arkiverad viktig information
+      href: ../hdinsight-release-notes-archive.md
       maintainContext: true
-      items:
-        - name: Arkiverad viktig information
-          href: ../hdinsight-release-notes-archive.md
-          maintainContext: true
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=intelligence-analytics'
-    - name: Få hjälp i forumet
-      href: 'https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=hdinsight'
-    - name: Utbildningsväg
-      href: 'https://azure.microsoft.com/documentation/learning-paths/hdinsight-self-guided-hadoop-training/'
-    - name: Microsoft Professional Program för stordata
-      href: 'https://academy.microsoft.com/en-us/professional-program/big-data/'
-    - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: Windows-verktyg för HDInsight
-      href: ../hdinsight-hadoop-windows-tools.md
-      maintainContext: true
+    maintainContext: true
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
+  - name: Få hjälp i forumet
+    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=hdinsight
+  - name: Utbildningsväg
+    href: https://azure.microsoft.com/documentation/learning-paths/hdinsight-self-guided-hadoop-training/
+  - name: Microsoft Professional Program för stordata
+    href: https://academy.microsoft.com/en-us/professional-program/big-data/
+  - name: Priskalkylator
+    href: https://azure.microsoft.com/pricing/calculator/
+  - name: Windows-verktyg för HDInsight
+    href: ../hdinsight-hadoop-windows-tools.md
+    maintainContext: true
+ms.openlocfilehash: 130ff5525a19a6ea08c99c5ccce7ea8888477743
+ms.sourcegitcommit: 1af4bceb45a0b4edcdb1079fc279f9f2f448140b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/09/2018
+ms.locfileid: "41927054"
