--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -1,140 +1,149 @@
+items:
 - name: Dokumentation för Media Services
   href: ./index.yml
 - name: Översikt
   items:
-    - name: Om Media Services
-      href: media-services-overview.md
+  - name: Om Media Services
+    href: media-services-overview.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Strömma videofiler med .NET
-      href: stream-files-dotnet-quickstart.md
+  - name: Strömma videofiler med .NET
+    href: stream-files-dotnet-quickstart.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: 'Ladda upp, koda och strömma'
-      items:
-        - name: Med .NET
-          href: stream-files-tutorial-with-api.md
-        - name: Med REST
-          href: stream-files-tutorial-with-rest.md
-    - name: Strömma live
-      items:
-        - name: Med .NET Core
-          href: stream-live-tutorial-with-api.md
-    - name: Analysera din video
-      items:
-        - name: Med .NET
-          href: analyze-videos-tutorial-with-api.md
+  - name: Ladda upp, koda och strömma
+    items:
+    - name: Med .NET
+      href: stream-files-tutorial-with-api.md
+    - name: Med REST
+      href: stream-files-tutorial-with-rest.md
+  - name: Strömma live
+    items:
+    - name: Med .NET Core
+      href: stream-live-tutorial-with-api.md
+  - name: Analysera din video
+    items:
+    - name: Med .NET
+      href: analyze-videos-tutorial-with-api.md
 - name: Exempel
   items:
-    - name: Azure-kodexempel
-      href: 'https://azure.microsoft.com/resources/samples/?sort=0&service=media-services&term=v3'
-    - name: Azure CLI
-      href: cli-samples.md
+  - name: Azure-kodexempel
+    href: https://azure.microsoft.com/resources/samples/?sort=0&service=media-services&term=v3
+  - name: Azure CLI
+    href: cli-samples.md
 - name: Begrepp
   items:
-    - name: Tillgångar
-      href: assets-concept.md
-    - name: Innehållsskydd
-      items:
-        - name: Översikt
-          href: content-protection-overview.md
-        - name: Multi-DRM-system med åtkomstkontroll
-          href: design-multi-drm-system-with-access-control.md
-    - name: Kodning
-      items:
-        - name: Översikt
-          href: encoding-concept.md
-        - name: Generera anpassningsbar bithastighetsstege automatiskt
-          href: autogen-bitrate-ladder.md
-    - name: Liveuppspelning
-      href: live-streaming-overview.md
-    - name: Medieintelligens
-      href: intelligence-concept.md
-    - name: Reagerar på händelser
-      href: reacting-to-media-services-events.md
-    - name: Lagringskonton
-      href: storage-account-concept.md
-    - name: Transformeringar och jobb
-      href: transform-concept.md
+  - name: Tillgångar
+    href: assets-concept.md
+  - name: Innehållsskydd
+    items:
+    - name: Översikt
+      href: content-protection-overview.md
+    - name: Multi-DRM-system med åtkomstkontroll
+      href: design-multi-drm-system-with-access-control.md
+  - name: Kodning
+    items:
+    - name: Översikt
+      href: encoding-concept.md
+    - name: Generera anpassningsbar bithastighetsstege automatiskt
+      href: autogen-bitrate-ladder.md
+  - name: Liveuppspelning
+    href: live-streaming-overview.md
+  - name: Medieintelligens
+    href: intelligence-concept.md
+  - name: Reagerar på händelser
+    href: reacting-to-media-services-events.md
+  - name: Lagringskonton
+    href: storage-account-concept.md
+  - name: Transformeringar och jobb
+    href: transform-concept.md
 - name: Instruktionsguider
   items:
-    - name: Migrera från v2 till v3
-      href: migrate-from-v2-to-v3.md
-    - name: Skapa ett konto – CLI
-      href: create-account-cli-how-to.md
-    - name: 'Åtkomst till API:er – CLI'
-      href: access-api-cli-how-to.md
-    - name: Övervaka händelser för jobbtillstånd – CLI
-      href: job-state-events-cli-how-to.md
-    - name: Anpassa förinställningar för transformering – .NET Core
-      href: customize-encoder-presets-how-to.md
-    - name: Överföra innehåll
-      items:
-        - name: 'Från HTTP(:er) – .NET'
-          href: job-input-from-http-how-to.md
-        - name: Från en lokal fil – .NET
-          href: job-input-from-local-file-how-to.md
-    - name: Skydda innehåll
-      items:
-        - name: Med AES-128 – .NET
-          href: protect-with-aes128.md
-        - name: Med DRM - .NET
-          href: protect-with-drm.md
+  - name: Migrera från v2 till v3
+    href: migrate-from-v2-to-v3.md
+  - name: Skapa ett konto – CLI
+    href: create-account-cli-how-to.md
+  - name: Åtkomst till API:er – CLI
+    href: access-api-cli-how-to.md
+  - name: Övervaka händelser för jobbtillstånd – CLI
+    href: job-state-events-cli-how-to.md
+  - name: Anpassa förinställningar för transformering – .NET Core
+    href: customize-encoder-presets-how-to.md
+  - name: Överföra innehåll
+    items:
+    - name: Från HTTP(:er) – .NET
+      href: job-input-from-http-how-to.md
+    - name: Från en lokal fil – .NET
+      href: job-input-from-local-file-how-to.md
+  - name: Skydda innehåll
+    items:
+    - name: Med AES-128 – .NET
+      href: protect-with-aes128.md
+    - name: Med DRM - .NET
+      href: protect-with-drm.md
 - name: Referens
   items:
-    - name: OpenAPI-specifikation (Swagger)
-      href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/mediaservices/resource-manager/Microsoft.Media/preview/2018-03-30-preview'
-    - name: Azure CLI
-      href: 'https://aka.ms/ams-v3-cli-ref'
-    - name: REST
-      href: 'https://aka.ms/ams-v3-rest-ref'
-    - name: .NET
-      href: 'https://aka.ms/ams-v3-dotnet-ref'
-    - name: Java
-      href: 'https://aka.ms/ams-v3-java-ref'
-    - name: Python
-      href: 'https://aka.ms/ams-v3-python-ref'
-    - name: Node .js
-      href: 'https://aka.ms/ams-v3-nodejs-ref'
-    - name: Händelsescheman
-      href: media-services-event-schemas.md
-    - name: DRM-licenser
-      items:
-        - name: PlayReady-licensmall
-          href: playready-license-template-overview.md
-        - name: Widevine-licensmall
-          href: widevine-license-template-overview.md
-        - name: Licenskrav för FairPlay
-          href: fairplay-license-overview.md
+  - name: OpenAPI-specifikation (Swagger)
+    href: https://github.com/Azure/azure-rest-api-specs/tree/master/specification/mediaservices/resource-manager/Microsoft.Media/preview/2018-03-30-preview
+  - name: Azure CLI
+    href: https://aka.ms/ams-v3-cli-ref
+  - name: REST
+    href: https://aka.ms/ams-v3-rest-ref
+  - name: .NET
+    href: https://aka.ms/ams-v3-dotnet-ref
+  - name: Java
+    href: https://aka.ms/ams-v3-java-ref
+  - name: Python
+    href: https://aka.ms/ams-v3-python-ref
+  - name: Node .js
+    href: https://aka.ms/ams-v3-nodejs-ref
+  - name: Go
+    href: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/preview/mediaservices/mgmt/2018-06-01-preview/media
+  - name: Händelsescheman
+    href: media-services-event-schemas.md
+  - name: DRM-licenser
+    items:
+    - name: PlayReady-licensmall
+      href: playready-license-template-overview.md
+    - name: Widevine-licensmall
+      href: widevine-license-template-overview.md
+    - name: Licenskrav för FairPlay
+      href: fairplay-license-overview.md
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=web-mobile'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/media-services/'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=media-services'
-    - name: 'SDK:er'
-      items:
-        - name: Azure CLI
-          href: 'https://aka.ms/ams-v3-cli'
-        - name: REST
-          href: 'https://aka.ms/ams-v3-rest-sdk'
-        - name: .NET
-          href: 'https://aka.ms/ams-v3-dotnet-sdk'
-        - name: Java
-          href: 'https://aka.ms/ams-v3-java-sdk'
-        - name: Python
-          href: 'https://aka.ms/ams-v3-python-sdk'
-        - name: Node .js
-          href: 'https://aka.ms/ams-v3-nodejs-sdk'
-    - name: Viktig information
-    - name: Viktig information
-      href: release-notes.md
-    - name: Kvoter och begränsningar
-      href: limits-quotas-constraints.md
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: frequently-asked-questions.md
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=web-mobile
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/media-services/
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
+  - name: Videoklipp
+    href: https://azure.microsoft.com/resources/videos/index/?services=media-services
+  - name: SDK:er
+    items:
+    - name: Azure CLI
+      href: https://aka.ms/ams-v3-cli
+    - name: REST
+      href: https://aka.ms/ams-v3-rest-sdk
+    - name: .NET
+      href: https://aka.ms/ams-v3-dotnet-sdk
+    - name: Java
+      href: https://aka.ms/ams-v3-java-sdk
+    - name: Python
+      href: https://aka.ms/ams-v3-python-sdk
+    - name: Node .js
+      href: https://aka.ms/ams-v3-nodejs-sdk
+  - name: Viktig information
+  - name: Viktig information
+    href: release-notes.md
+  - name: Kvoter och begränsningar
+    href: limits-quotas-constraints.md
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: frequently-asked-questions.md
+ms.openlocfilehash: f68492799ce9066e2e70bb1c3056deef20805413
+ms.sourcegitcommit: f057c10ae4f26a768e97f2cb3f3faca9ed23ff1b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/17/2018
+ms.locfileid: "41929678"
