--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -1,5 +1,6 @@
+items:
 - name: Dokumentation om Virtual Machines
-  href: index.md
+  href: index.yml
 - name: Virtuella Linux-datorer i Azure
   href: linux/overview.md
 - name: Virtuella Windows-datorer i Azure
@@ -8,19 +9,25 @@
   href: extensions/overview.md
 - name: Arbetsbelastningar
   items:
-    - name: Oracle
-      href: workloads/oracle/oracle-considerations.md
-    - name: SAP
-      href: workloads/sap/get-started.md
+  - name: Oracle
+    href: workloads/oracle/oracle-considerations.md
+  - name: SAP
+    href: workloads/sap/get-started.md
 - name: Klassiska distributioner
   items:
-    - name: Virtuella Linux-datorer med klassisk distribution
-      href: linux/overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2fclassic%2ftoc.json
-    - name: Virtuella Windows-datorer med klassisk distribution
-      href: windows/overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fclassic%2ftoc.json
+  - name: Virtuella Linux-datorer med klassisk distribution
+    href: linux/overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2fclassic%2ftoc.json
+  - name: Virtuella Windows-datorer med klassisk distribution
+    href: windows/overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fclassic%2ftoc.json
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=compute'
-    - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=compute
+  - name: Priskalkylator
+    href: https://azure.microsoft.com/pricing/calculator/
+ms.openlocfilehash: 8193e1bed622e29df735fe31e4e6e0b5dcd4a2b8
+ms.sourcegitcommit: 1af4bceb45a0b4edcdb1079fc279f9f2f448140b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/09/2018
+ms.locfileid: "41928059"
