--- a/articles/virtual-machines/extensions/toc.yml
+++ b/articles/virtual-machines/extensions/toc.yml
@@ -1,111 +1,118 @@
+items:
 - name: Dokumentation om VM-tillägg
-  href: ../index.md
+  href: ../index.yml
 - name: Översikt
   items:
-    - name: Om Azure-tillägg
-      href: overview.md
-    - name: VM-agent för Linux
-      href: agent-linux.md
-    - name: VM-agent för Windows
-      href: agent-windows.md
+  - name: Om Azure-tillägg
+    href: overview.md
+  - name: VM-agent för Linux
+    href: agent-linux.md
+  - name: VM-agent för Windows
+    href: agent-windows.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Använda det anpassade skripttillägget
-      href: /azure/virtual-machines/windows/tutorial-automate-vm-deployment
-      maintainContext: true
+  - name: Använda det anpassade skripttillägget
+    href: /azure/virtual-machines/windows/tutorial-automate-vm-deployment
+    maintainContext: true
+  expanded: true
 - name: Begrepp
   items:
-    - name: Linux
-      href: features-linux.md
-    - name: Windows
-      href: features-windows.md
+  - name: Linux
+    href: features-linux.md
+  - name: Windows
+    href: features-windows.md
 - name: Instruktionsguider
   items:
-    - name: Azure Disk Encryption
-      items:
-        - name: Linux
-          href: azure-disk-enc-linux.md
-        - name: Windows
-          href: azure-disk-enc-windows.md
-    - name: Anpassat skript
-      items:
-        - name: Linux – version 2
-          href: custom-script-linux.md
-        - name: Linux – version 1 (OSTC)
-          href: custom-script-linuxOstc.md
-        - name: Windows
-          href: custom-script-windows.md
-        - name: Azure Service Management (klassisk)
-          href: custom-script-classic.md
-    - name: IaaS-program mot skadlig kod för Windows
-      href: iaas-antimalware-windows.md
-    - name: VM-ögonblicksbild
-      items:
-        - name: Linux
-          href: vmsnapshot-linux.md
-        - name: Windows
-          href: vmsnapshot-windows.md
-    - name: Network Watcher-agent
-      items:
-        - name: Linux
-          href: network-watcher-linux.md
-        - name: Windows
-          href: network-watcher-windows.md
-    - name: NVIDIA GPU-drivrutiner
-      items:
-        - name: Linux
-          href: hpccompute-gpu-linux.md
-        - name: Windows
-          href: hpccompute-gpu-windows.md
-    - name: Operations Management Suite
-      items:
-        - name: Linux
-          href: oms-linux.md
-        - name: Windows
-          href: oms-windows.md
-    - name: PowerShell DSC
-      href: dsc-overview.md
-      items:
-        - name: DSC och Windows
-          href: dsc-windows.md
-        - name: DSC och Linux
-          href: dsc-linux.md
-        - name: Hantera autentiseringsuppgifter
-          href: dsc-credentials.md
-        - name: Använd mallar
-          href: dsc-template.md
-    - name: Åtkomst till virtuella datorer
-      href: vmaccess.md
-    - name: Diagnostik för virtuell dator
-      items:
-        - name: Linux
-          href: diagnostics-linux.md
-        - name: Windows
-          href: diagnostics-windows.md
-        - name: Använd mallar
-          href: diagnostics-template.md
-    - name: Tillägg från tredje part
-      items:
-        - name: Stackify Retrace
-          href: stackify-retrace-linux.md
-        - name: Symantec
-          href: symantec.md
-    - name: Inaktuella tillägg
-      items:
-        - name: Logginsamlare
-          href: log-collector.md
-        - name: Trend Micro Deep Security
-          href: trend.md
-    - name: Begränsa installation av tillägg
-      items:
-        - name: Linux
-          href: extensions-rmpolicy-howto-cli.md
-        - name: Windows
-          href: extensions-rmpolicy-howto-ps.md
-    - name: Uppdatera Linux-agenten
-      href: update-linux-agent.md
-    - name: Exportera tillägg
-      href: export-templates.md
-    - name: Felsöka
-      href: troubleshoot.md
+  - name: Azure Disk Encryption
+    items:
+    - name: Linux
+      href: azure-disk-enc-linux.md
+    - name: Windows
+      href: azure-disk-enc-windows.md
+  - name: Anpassat skript
+    items:
+    - name: Linux – version 2
+      href: custom-script-linux.md
+    - name: Windows
+      href: custom-script-windows.md
+    - name: Azure Service Management (klassisk)
+      href: custom-script-classic.md
+  - name: IaaS-program mot skadlig kod för Windows
+    href: iaas-antimalware-windows.md
+  - name: VM-ögonblicksbild
+    items:
+    - name: Linux
+      href: vmsnapshot-linux.md
+    - name: Windows
+      href: vmsnapshot-windows.md
+  - name: Network Watcher-agent
+    items:
+    - name: Linux
+      href: network-watcher-linux.md
+    - name: Windows
+      href: network-watcher-windows.md
+  - name: NVIDIA GPU-drivrutiner
+    items:
+    - name: Linux
+      href: hpccompute-gpu-linux.md
+    - name: Windows
+      href: hpccompute-gpu-windows.md
+  - name: Operations Management Suite
+    items:
+    - name: Linux
+      href: oms-linux.md
+    - name: Windows
+      href: oms-windows.md
+  - name: PowerShell DSC
+    href: dsc-overview.md
+    items:
+    - name: DSC och Windows
+      href: dsc-windows.md
+    - name: DSC och Linux
+      href: dsc-linux.md
+    - name: Hantera autentiseringsuppgifter
+      href: dsc-credentials.md
+    - name: Använd mallar
+      href: dsc-template.md
+  - name: Åtkomst till virtuella datorer
+    href: vmaccess.md
+  - name: Diagnostik för virtuell dator
+    items:
+    - name: Linux
+      href: diagnostics-linux.md
+    - name: Windows
+      href: diagnostics-windows.md
+    - name: Använd mallar
+      href: diagnostics-template.md
+  - name: Tillägg från tredje part
+    items:
+    - name: Stackify Retrace
+      href: stackify-retrace-linux.md
+    - name: Symantec
+      href: symantec.md
+  - name: Inaktuella tillägg
+    items:
+    - name: Logginsamlare
+      href: log-collector.md
+    - name: Trend Micro Deep Security
+      href: trend.md
+    - name: Linux – version 1 (OSTC)
+      href: custom-script-linuxOstc.md
+  - name: Begränsa installation av tillägg
+    items:
+    - name: Linux
+      href: extensions-rmpolicy-howto-cli.md
+    - name: Windows
+      href: extensions-rmpolicy-howto-ps.md
+  - name: Uppdatera Linux-agenten
+    href: update-linux-agent.md
+  - name: Exportera tillägg
+    href: export-templates.md
+  - name: Felsöka
+    href: troubleshoot.md
+ms.openlocfilehash: 5b736cb5ed16f8f72f5c335c2ca9112a035063b3
+ms.sourcegitcommit: d2f2356d8fe7845860b6cf6b6545f2a5036a3dd6
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/16/2018
+ms.locfileid: "41927946"
